--- a/app/src/main/res/layout/activity_products_list.xml
+++ b/app/src/main/res/layout/activity_products_list.xml
@@ -6,19 +6,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".views.ProductsActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <Button android:id="@+id/filter_button"
+
+        <Button
+            android:id="@+id/filter_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/filter"
-            android:layout_weight="1"/>
-        <Button android:id="@+id/sort_button"
+            android:layout_weight="1"
+            android:text="@string/filter" />
+
+        <Button
+            android:id="@+id/sort_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/sort"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:text="@string/sort" />
 
         <Button
             android:id="@+id/cat_button"
@@ -27,13 +32,23 @@
             android:layout_weight="1"
             android:text="Categories" />
 
-        <ImageButton android:id="@+id/change_view_button"
+        <ImageButton
+            android:id="@+id/change_view_button"
             android:layout_width="50dp"
-            android:layout_height="match_parent"
-            />
+            android:layout_height="match_parent" />
     </LinearLayout>
-    <FrameLayout android:id="@+id/products_container"
+
+    <TextView
+        android:id="@+id/categoryText"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="10dp"
+        android:text="TextView" />
+
+    <FrameLayout
+        android:id="@+id/products_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
