--- a/app/src/main/res/layout/activity_products_list.xml
+++ b/app/src/main/res/layout/activity_products_list.xml
@@ -25,12 +25,17 @@
             android:layout_weight="1"
             android:text="@string/sort" />
 
-        <Button
-            android:id="@+id/cat_button"
+        <!--<Button-->
+            <!--android:id="@+id/cat_button"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_weight="1"-->
+            <!--android:text="Categories" />-->
+        <Button android:id="@+id/favorites_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Categories" />
+            android:text="Ulubione"/>
 
         <ImageButton
             android:id="@+id/change_view_button"
