--- a/app/src/main/res/layout/item_favorites.xml
+++ b/app/src/main/res/layout/item_favorites.xml
@@ -11,9 +11,7 @@
         android:maxHeight="150dp"
         android:maxWidth="150dp"
         android:adjustViewBounds="true"
-
         />
-
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
@@ -33,16 +31,6 @@
         app:layout_constraintTop_toBottomOf="@+id/title" />
 
     <TextView
-        android:id="@+id/category"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="Kategoria"
-        app:layout_constraintStart_toEndOf="@+id/cover"
-        app:layout_constraintTop_toBottomOf="@+id/author" />
-
-    <TextView
         android:id="@+id/price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -54,32 +42,10 @@
         android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cover"
-        app:layout_constraintTop_toBottomOf="@+id/category" />
-
-    <TextView
-        android:id="@+id/buyed"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/colorPrice"
-        android:textSize="30dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:text="Zakupiono"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:visibility="gone"/>
-
-    <CheckBox
-        android:id="@+id/favorites"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/author" />
 
     <ImageButton
-        android:id="@+id/buy_button"
+        android:id="@+id/remove_button"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginTop="8dp"
@@ -88,8 +54,7 @@
         android:adjustViewBounds="true"
         android:scaleType="fitCenter"
         android:src="@drawable/shopping"
-        android:tooltipText="@string/buy"
         app:layout_constraintBottom_toBottomOf="@+id/cover"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/favorites" />
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
