--- a/app/src/main/res/layout/element_product_details.xml
+++ b/app/src/main/res/layout/element_product_details.xml
@@ -21,7 +21,7 @@
         app:layout_constraintTop_toBottomOf="@+id/title" />
 
     <TextView
-        android:id="@+id/category"
+        android:id="@+id/category.name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/author"
@@ -34,6 +34,6 @@
         android:text="99 zł"
         android:textColor="@color/colorPrice"
         android:textSize="25dp"
-        app:layout_constraintTop_toBottomOf="@+id/category" />
+        app:layout_constraintTop_toBottomOf="@+id/category.name" />
 
 </android.support.constraint.ConstraintLayout>
